# nexus32-emulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: clearui-integration.md
src/: main.c  rom_load.c  rom_load.h
src/apu/: apu.c  apu.h
src/cpu/: cpu.c  cpu.h  disasm.c  vector.c
src/debug/: debug.h  debug_ui.c  debug_ui.h  debugger.c  profiler.c
src/dma/: dma.c  dma.h
src/gpu/: gpu.c  gpu.h  pipeline_cache.c  shader_compiler.c  texture_cache.c
src/input/: input.c  input.h
src/mem/: memory.c  memory.h
src/platform/: audio_backend.c  vulkan_init.c  vulkan_init.h
test/fixtures/: README.md  minimal.nxrom
